# p2pchat

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
dev/cmake/: FindReadline.cmake
dev/docs/: design.html  design.md  design.org
dev/scripts/: build.sh  unused_values.sh
src/: app.c  app.h  log.h  main.c  peer.c  peer.h  rpc.c  rpc.h  rpc.rpc  types.h
